--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "brain-games-aldarg",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "My 1st project on Hexlet",
-  "main": "index.js",
-  "git": "https://github.com/aldarg/project-lvl1-s508",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
   },
-  "author": "",
+  "author": "Aleksandr Dargeev",
   "license": "ISC",
   "bin": {
-    "welcome": "src/bin/brain-games.js",
     "brain-games": "dist/bin/brain-games.js"
   },
   "devDependencies": {
