--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,18 @@
+---
+
+plugins:
+  # https://github.com/babel/eslint-plugin-babel
+  - babel
+
 extends:
   - 'airbnb-base'
+
 env:
   node: true
   browser: true
+
+# https://github.com/babel/babel-eslint
+parser: babel-eslint
+
+rules:
+  no-console: 0
