--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-aldarg",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "My 1st project on Hexlet",
   "main": "dist/index.js",
   "scripts": {
@@ -14,7 +14,8 @@
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-progression": "dist/bin/brain-progression.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
